create header; add colors and fonts to theme

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  @apply font-quicksand;
+}
+
+.nav-hover {
+  @apply hover:underline hover:text-grullo duration-200;
+}
